syntax = "proto3";
package estimation;

service Estimation {
  rpc TimeAndDistanceBetweenPoints (PointsInfo) returns (DirectionsInfo) {}
}

message PointsInfo {
  string lat1 = 1;
  string long1 = 2;
  string lat2 = 3;
  string long2 = 4;
}

message DirectionsInfo {
  int32 time = 1;
  int32 distance = 2;
}
